	PR c/35017 	* c-decl.c (start_decl): Don't pedwarn about TREE_READONLY 	static decls. 	* c-typeck.c (build_external_ref): Don't pedwarn about 	static vars in current function's scope.

* gcc.dg/inline-25.c: New test.
	* gcc.dg/inline-26.c: New test.
	* gcc.dg/inline-27.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131945 138bc75d-0d04-0410-961f-82ee72b054a4